flag not showing in edit page has been fixed

--- a/style/css/main.css
+++ b/style/css/main.css
@@ -137,6 +137,10 @@
   margin-left: 5px;
 }
 
+.button-star {
+  display: none;
+}
+
 .header-container {
   display: flex;
   justify-content: space-between;
