--- a/style/scss/partials/_home.scss
+++ b/style/scss/partials/_home.scss
@@ -94,3 +94,6 @@ tr:hover .home-dis2{
     border-radius:5px;
     margin-left:5px;
 }
+.button-star{
+    display:none;
+}
